# xfce4-touchpadtoggled

./: .gitignore  AUTHORS  NEWS  README  THANKS  configure.ac.in  module.xml
data/: Makefile.am  xfce4-touchpadtoggled.desktop.in
src/: Makefile.am  main.c  xttd_data_types.h  xttd_keys.c  xttd_keys.h  xttd_notify.c  xttd_notify.h  xttd_xinput.c  xttd_xinput.h
